# modal-uv

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
docs/superpowers/plans/: 2026-07-06-modal-uv-global-cli.md  2026-07-09-modal-uv-exec.md  2026-07-10-modal-uv-playbooks.md  2026-07-16-modal-uv-astro-marketing-site.md
docs/superpowers/specs/: 2026-06-06-modal-uv-connection-daemon-design.md  2026-06-06-modal-uv-direct-sync-design.md  2026-06-06-modal-uv-preload-imports-design.md  2026-06-06-modal-uv-python-in-process-design.md  2026-07-06-modal-uv-global-cli-design.md  2026-07-09-modal-uv-exec-design.md  2026-07-10-modal-uv-playbooks-design.md  2026-07-16-modal-uv-astro-marketing-site-design.md
example-repo/: .gitignore  modal-uv.yaml
example-repo/src/example_pkg/: main.py
playbooks/cuda-hello/: .gitignore  README.md  modal-uv.yaml  pyproject.toml
playbooks/cuda-hello/scripts/: build-and-run.sh
playbooks/example-repo/: modal-uv.yaml  pyproject.toml
playbooks/example-repo/src/example_pkg/: __init__.py
playbooks/example-repo/tests/: test_main.py
playbooks/mnist-cnn/: .gitignore  README.md  modal-uv.yaml  pyproject.toml  train_mnist.py
playbooks/rocksdb-build/: .gitignore  README.md  modal-uv.yaml  pyproject.toml
site/: astro.config.mjs  package-lock.json  package.json
skills/use-modal-uv/: SKILL.md
src/modal_uv/: __init__.py  __main__.py  app.py  cli.py  client.py  config.py  daemon.py  deployment.py  paths.py  skill.py  sync.py
tests/: test_modal_uv_app.py  test_modal_uv_cli.py  test_modal_uv_config.py  test_modal_uv_daemon.py  test_modal_uv_deployment.py  test_modal_uv_skill.py  test_modal_uv_sync.py  test_modal_uv_version.py
(+9 files in other folders)
