[project]
name = "modal-uv"
version = "0.1.0"
description = "Run uv commands on Modal.com with GPU and direct file sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "modal>=1.4.3",
    "pathspec>=0.12.1",
    "pydantic-settings[yaml]>=2.7.0",
    "typer>=0.15.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
modal-uv = "modal_uv.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modal_uv"]

[tool.hatch.build.targets.wheel.force-include]
"skills/use-modal-uv/SKILL.md" = "modal_uv/skill/SKILL.md"

[dependency-groups]
dev = [
    "httpx2>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a23",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "modal: tests intended to run on Modal/GPU infrastructure",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
exclude = ["example-repo/**"]
