[project]
name = "example-pkg"
version = "0.1.0"
description = "Example project for testing modal-uv onboard"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
example-cli = "example_pkg.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_pkg"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
